# DumbDB

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md
.github/workflows/: ci.yml
dumbdb/: Cargo.toml  __init__.pyi  bin.rs  example.dumb.db  lib.rs  pyproject.toml
dumbdb/__bindings__/: python.rs
dumbdb/__core__/: Cargo.toml  error.rs  lib.rs  python_bindings.rs
dumbdb/__core__/builtin_impl/: impls.rs  memory.rs  mod.rs
dumbdb/orm/: Cargo.toml  __init__.pyi  lib.rs
dumbdb/query/: Cargo.toml  __init__.pyi
