[package]
name = "dumbdb"
description = "Database for Dummies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"
name = "dumbdb"

[[bin]]
required-features = ["standalone"]
path = "bin.rs"
name = "dumbdb"

[[example]]
name = "example"
path = "../example.rs"

[dependencies.ddb]
package = "dumbdb-core"
path = "__core__"

[dependencies.bin]
package = "dumbdb-bin"
path = "__core__/bin"
optional = true

[features]
default = ["embed"]

# Embeddable
embed = ["ddb/export-builtin-impl"]
# Embeddable (python bindings)
embed-python = ["embed"]
# Embeddable (deno bindings)
embed-deno = ["embed"]

# Standalone (binary)
standalone = ["dep:bin"]
