[package]
name = "dumbdb-core"
description = "Core of DumbDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies.pyo3] # Python Bindings
features = ["abi3-py38"]
version = "0.20"
optional = true

[features]
pyo3 = ["dep:pyo3"]
export-builtin-impl = []
